# cookiecutter-poetry

./: .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
.github/: ISSUE_TEMPLATE.md
{{cookiecutter.slug}}/: .coveragerc  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.slug}}/.github/: ISSUE_TEMPLATE.md  publish.yml  test.yml
{{cookiecutter.slug}}/src/{{cookiecutter.slug}}/: __init__.py
{{cookiecutter.slug}}/test/: test_{{cookiecutter.slug}}.py
{{cookiecutter.underscored}}/: README.md  pyproject.toml
{{cookiecutter.underscored}}/src/{{cookiecutter.underscored}}/: __init__.py
{{cookiecutter.underscored}}/tests/: test_{{cookiecutter.underscored}}.py
