[tool.poetry]
name = "Poetry Cookiecutter Template"
description = "test"
authors = ["Dan Buchholz"]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"